<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="loading_ellipsis">Загрузка...</string>
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="get_push_notifications">Получать push-уведомления</string>
    <string name="field_of_activity">Сфера деятельности</string>
    <string name="birthday">Дата рождения</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="help">Помочь</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete_photo">Удалить</string>
    <string name="choose_help_category">Выберите категорию помощи</string>
    <string name="by_events">По мероприятиям</string>
    <string name="by_organizations">По НКО</string>
    <string name="enter_organization_name">Введите наименование организации</string>
    <string name="enter_event_name">Введите название мероприятия</string>
    <string name="filter">Фильтр</string>
    <plurals name="search_results">
        <item quantity="one">Результаты поиска: %d мероприятие</item>
        <item quantity="few">Результаты поиска: %d мероприятия</item>
        <item quantity="many">Результаты поиска: %d мероприятий</item>
        <item quantity="other">Результаты поиска: %d мероприятий</item>
    </plurals>
    <string name="event_certain_day">%s</string>
    <string name="event_is_over">Мероприятие прошло (%s - %s)</string>
    <string name="done">Готово</string>
    <string name="help_categories">Категории помощи</string>
    <string name="share">Поделиться</string>
    <string name="have_questions">У вас есть вопросы?</string>
    <string name="write_us">Напишите нам</string>
    <string name="go_to_organization_site">Перейти на сайт организации</string>
    <string name="help_with_money">Помочь\nденьгами</string>
    <string name="professional_help">Проф.\nпомощь</string>
    <string name="become_volunteer">Стать\nволонтером</string>
    <string name="help_with_clothes">Помочь\nвещами</string>
    <string name="auth_with_social_networks_to_participate_in_events">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="or_auth_within_app">Или авторизуйтесь через приложение</string>
    <string name="e_mail">E-mail</string>
    <string name="input_e_mail">Введите e-mail</string>
    <string name="password">Пароль</string>
    <string name="input_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="signing_up">Регистрация</string>
    <string name="keywords_are">Ключевые слова: %s</string>
    <string name="for_example">Например,</string>
    <string name="write_in_search_bar_name_of_event">Напишите в строке поиска название мероприятия или ключевые слова</string>
    <string name="keywords_example">мастер-класс, помощь</string>
    <string name="authorization">Авторизация</string>
    <string name="loading">Загрузка...</string>
    <plurals name="event_date">
        <item quantity="zero">Сегодня последний день!</item>
        <item quantity="one">Остался %s день (%s - %s)</item>
        <item quantity="few">Осталось %s дня (%s - %s)</item>
        <item quantity="many">Осталось %s дней (%s - %s)</item>
    </plurals>
</resources>