<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/newsNavItem"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/searchNavItem"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/helpNavItem"
        android:title="@string/help"
        android:enabled="false"/>

    <item
        android:id="@+id/historyNavItem"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/profileNavItem"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>