<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/spacing_xxl_2">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/authToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Авторизация"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextStyle2"
            app:titleTextColor="?colorOnPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/socialNetworksTV"
            style="@style/TextStyle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/auth_with_social_networks_to_participate_in_events"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authToolbar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/vkImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:background="@null"
            android:src="@drawable/ic_vk"
            app:layout_constraintEnd_toStartOf="@id/facebookImageButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/socialNetworksTV" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/facebookImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@null"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toStartOf="@id/okImageButton"
            app:layout_constraintStart_toEndOf="@id/vkImageButton"
            app:layout_constraintTop_toTopOf="@id/vkImageButton" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/okImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/facebookImageButton"
            app:layout_constraintTop_toTopOf="@id/vkImageButton" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/authWithAppTextView"
            style="@style/TextStyle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/or_auth_within_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vkImageButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Theme.AndroidPractice.TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_l"
            android:hint="@string/e_mail"
            app:layout_constraintTop_toBottomOf="@id/authWithAppTextView"
            app:placeholderText="@string/input_e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailEditText"
                style="@style/Theme.AndroidPractice.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Theme.AndroidPractice.TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_l"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:placeholderText="@string/input_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordEditText"
                style="@style/Theme.AndroidPractice.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Theme.AndroidPractice.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_l"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textAppearance="@style/TextStyle17"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="true"
            android:textColor="@color/leaf"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            tools:text="@string/forgot_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registrationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/leaf"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            app:layout_constraintTop_toTopOf="@id/forgotPasswordTextView"
            tools:text="@string/signing_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
