<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profile_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/profile_toolbar_menu"
            app:title="@string/profile"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextStyle2"
            app:titleTextColor="?colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/ic_image_man" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="Константинов Денис"
                android:textColor="@color/black_87"
                android:textSize="24sp"
                app:lineHeight="32sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="@string/birthday" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/birthdayTextView"
                style="@style/TextStyle8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="01 февраля 1980" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="@string/field_of_activity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fieldOfActivityTextView"
                style="@style/TextStyle8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="Хирургия, травмотология" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/getPushSwitch"
                style="@style/Theme.AndroidPractice.Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="@string/get_push_notifications" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_xxs"
                app:dividerColor="@color/cool_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_l"
                android:text="@string/your_friends" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friendRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                android:layout_marginTop="@dimen/spacing_s"
                android:layout_marginEnd="@dimen/spacing_l"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_friend" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_m"
                app:dividerColor="@color/cool_grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_marginBottom="@dimen/spacing_xll_2"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyle7" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>