<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/choosePhotoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_xl"
        android:paddingTop="@dimen/spacing_xxl_2"
        android:paddingEnd="@dimen/spacing_xl"
        android:paddingBottom="@dimen/spacing_l">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_upload" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyle16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/choose_photo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/takePhotoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_xl"
        android:paddingTop="22dp"
        android:paddingEnd="@dimen/spacing_xl"
        android:paddingBottom="22dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_camera" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyle16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/take_photo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deletePhotoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_xl"
        android:paddingTop="22dp"
        android:paddingEnd="@dimen/spacing_xl"
        android:paddingBottom="@dimen/spacing_xxl">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_delete" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyle16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/delete_photo" />

    </LinearLayout>
</LinearLayout>